--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -91,6 +91,39 @@
 {% endblock %}
 
 {% block body %}
+    <!-- Modal Impossible de réserver -->
+    <div class="modal fade" id="cantBookModal" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-danger text-white">
+                    <h5 class="modal-title">Réservation en ligne indisponible</h5>
+                    <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body text-center py-4">
+                    <i class="fas fa-calendar-times fa-3x text-danger mb-3"></i>
+                    <p class="lead mb-4">Pour prendre rendez-vous, merci de nous contacter directement.</p>
+                    <div class="d-grid gap-2 col-8 mx-auto">
+                        <button type="button" class="btn btn-outline-dark btn-block" data-dismiss="modal" data-toggle="modal" data-target="#contactModal">
+                            <i class="fas fa-envelope me-2"></i>Formulaire de contact
+                        </button>
+                        <a href="tel:0123456789" class="btn btn-outline-dark btn-block">
+                            <i class="fas fa-phone me-2"></i>Appeler le salon
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% if app.flashes('warning_cant_book') %}
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                $('#cantBookModal').modal('show');
+            });
+        </script>
+    {% endif %}
+
     <!-- Categories Start (plein écran) -->
     <div class="container-fluid pt-5 pb-3 home-subcats-full">
         <div class="row pb-3 home-subcats-row">
